# thesis

./: .env.example  .gitignore  README.md  docker-compose.yml
diagrams/: dashboard.puml  database.puml  login.puml
models/Detection/: README.md  car_plate.yaml  main.py  pyproject.toml
models/OCR/: README.md  main.ipynb  pyproject.toml  train_ocr.py
website/backend/: .dockerignore  Dockerfile  pyproject.toml
website/backend/src/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
website/backend/src/routers/: auth.py  dashboard.py
website/frontend/: middleware.ts  package-lock.json  package.json
website/frontend/app/: layout.tsx  page.tsx
website/frontend/app/dashboard/: page.tsx
